[build-system]
requires = [ "poetry-core>=1.0.0",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "chkdns"
version = "0.4.0"
homepage = "https://github.com/chelnak/chkdns"
description = "A tool to check global dns propagation"
authors = [ "Craig Gumbley <craiggumbley@gmail.com>",]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0.3"
rich = "^11.0.0"
httpx = "^0.20.0"
mypy = "^0.910"
asyncio = "^3.4.3"
toml = "^0.10.2"
validators = "^0.18.2"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
pre-commit = "^2.15.0"
mypy = "^0.910"
types-toml = "^0.10.1"
types-setuptools = "^57.4.2"
requests = "^2.27.1"
bs4 = "^0.0.1"
types-requests = "^2.27.3"
types-beautifulsoup4 = "^4.10.10"

[tool.poetry.scripts]
chkdns = "chkdns.app:cli"
